openpearl-code/testsuite/must_not_compile/00_basics/005_no_system_statement.expect
005_no_system_statement.prl:3:0: ERROR : Syntax error :mismatched input 'stdout' expecting {'MODEND', 'SYSTEM', 'PROBLEM', '__cpp__', '__cpp'}
stdout: StdOut;  ! system part statement
     ^
