openpearl-code/testsuite/must_not_compile/00_basics/005_no_system_statement.prl
MODULE(m1);

stdout: StdOut;  ! system part statement

MODEND;

